adjusted the link ref.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CSS easier-homework</title>
-    <link rel="stylesheet" type="text/css" href="easier-homework-2.css">
+    <link rel="stylesheet" type="text/css" href="easier-homework.css">
 
 </head>
 
